--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -169,3 +169,6 @@ obj-$(CONFIG_ESOC)		+= esoc/
 obj-$(CONFIG_BIF)		+= bif/
 obj-$(CONFIG_SENSORS)		+= sensors/
 obj-$(CONFIG_SENSORS_SSC)	+= sensors/
+
+#FeliCa
+obj-$(CONFIG_LGE_FELICA)        += felica/
